SOURCES/patches/0033-watchdog-thunderbay-add-RAS-dependency.thb-po-thunderbay
From 00cfb1f16de3246d802de2fdc0ddfcad72d76d0f Mon Sep 17 00:00:00 2001
From: "Pan, Kris" <kris.pan@intel.com>
Date: Mon, 1 Mar 2021 09:34:01 +0800
Subject: [PATCH 033/223] watchdog: thunderbay: add RAS dependency

    drivers/watchdog/thunderbay_wdt.c: In function ?thunderbay_wdt_to_isr?:
    drivers/watchdog/thunderbay_wdt.c:174:3: error: implicit declaration of function ?xbay_ras_notify_wdog_event?; did you mean ?sysfs_notify_dirent?? [-Werror=implicit-function-declaration]
       xbay_ras_notify_wdog_event(XBAY_RAS_NS_WDOG_TO);
       ^~~~~~~~~~~~~~~~~~~~~~~~~~
       sysfs_notify_dirent
      CC [M]  drivers/scsi/qla2xxx/qla_bsg.o
      CC [M]  drivers/net/wireless/intel/ipw2x00/libipw_wx.o
      CC [M]  drivers/net/wireless/intel/ipw2x00/libipw_geo.o
    drivers/watchdog/thunderbay_wdt.c:174:30: error: ?XBAY_RAS_NS_WDOG_TO? undeclared (first use in this function)
       xbay_ras_notify_wdog_event(XBAY_RAS_NS_WDOG_TO);
                                  ^~~~~~~~~~~~~~~~~~~
    drivers/watchdog/thunderbay_wdt.c:174:30: note: each undeclared identifier is reported only once for each function it appears in
      CC [M]  drivers/power/supply/bq24257_charger.o
    drivers/watchdog/thunderbay_wdt.c: In function ?thunderbay_wdt_th_isr?:
    drivers/watchdog/thunderbay_wdt.c:200:30: error: ?XBAY_RAS_NS_WDOG_TH_TO? undeclared (first use in this function)
       xbay_ras_notify_wdog_event(XBAY_RAS_NS_WDOG_TH_TO);
                                  ^~~~~~~~~~~~~~~~~~~~~~
    cc1: some warnings being treated as errors

Signed-off-by: Pan, Kris <kris.pan@intel.com>
---
 drivers/watchdog/Kconfig | 1 +
 1 file changed, 1 insertion(+)

diff --git a/drivers/watchdog/Kconfig b/drivers/watchdog/Kconfig
index 43bc58c94362..f4ff9e34efa3 100644
--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -970,6 +970,7 @@ config VISCONTI_WATCHDOG
 config THUNDERBAY_WATCHDOG
 	tristate "Intel Thunder Bay SoC non-secure watchdog"
 	depends on OF
+	depends on XBAY_RAS
 	select WATCHDOG_CORE
 	help
 	  Say Y here to include support for the non-secure watchdog timer
-- 
2.27.0

